--- a/index.html
+++ b/index.html
@@ -216,6 +216,60 @@
 
             <div class="u-center-text u-margin-top-xl">
                 <a href="#" class="btn btn--green">Discover all Tours</a>
+            </div>
+        </section>
+
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                        your browser is not supported!
+                </video> 
+            </div>
+            <div class="u-center-text u-margin-bottom-large">
+                <h2 class="heading-secondary">
+                    we make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="person on a tour" class="story__img">
+                        <figcaption class="story__caption">Marry Smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u u-margin-bottom-small">I had the best week with my family</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint libero praesentium ab
+                            quibusdam doloribus magnam aperiam illo tempore, deserunt, accusantium odio asperiores
+                            dolorem voluptates et tempora eligendi debitis! Iure, veniam.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste expedita maiores
+                        +</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="person on a tour" class="story__img">
+                        <figcaption class="story__caption">Jack Smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u u-margin-bottom-small">my life is completely different now</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint libero praesentium ab
+                            quibusdam doloribus magnam aperiam illo tempore, deserunt, accusantium odio asperiores
+                            dolorem voluptates et tempora eligendi debitis! Iure, veniam.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste expedita maiores
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-xl">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+
         </section>
 
     </main>
