--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                 <video class="bg-video__content" autoplay muted loop>
                     <source src="img/video.mp4" type="video/mp4">
                     <source src="img/video.webm" type="video/webm">
-                        your browser is not supported!
-                </video> 
+                    your browser is not supported!
+                </video>
             </div>
             <div class="u-center-text u-margin-bottom-large">
                 <h2 class="heading-secondary">
@@ -245,7 +245,7 @@
                             quibusdam doloribus magnam aperiam illo tempore, deserunt, accusantium odio asperiores
                             dolorem voluptates et tempora eligendi debitis! Iure, veniam.
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste expedita maiores
-                        +</p>
+                            +</p>
                     </div>
                 </div>
             </div>
@@ -270,6 +270,47 @@
                 <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
 
+        </section>
+
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start Booking now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                                <label for="name" class="form__label">Full name</label>
+                            </div>
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                                <label for="email" class="form__label">Email address</label>
+                            </div>
+                            <div class="form__group u-margin-bottom-medium">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="small" name="size">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Small tour group</label>
+                                </div>
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="large" name="size">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Large tour group</label>
+                                </div>
+                            </div>
+                            <div class="form__group">
+                                <button class="btn btn--green">Next stop &rarr;</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
